--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   http: ^1.6.0
   image_picker: ^1.2.1
   shared_preferences: ^2.5.3
+  gradient_borders: ^1.0.2
 
 dev_dependencies:
   flutter_test:
