--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   image_picker: ^1.2.1
   shared_preferences: ^2.5.3
   gradient_borders: ^1.0.2
+  icons_plus: ^5.0.0
 
 dev_dependencies:
   flutter_test:
