--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,9 @@ dependencies:
   shared_preferences: ^2.5.3
   gradient_borders: ^1.0.2
   icons_plus: ^5.0.0
+  google_sign_in: ^6.1.5
+  firebase_core: ^4.3.0
+  firebase_auth: ^6.1.3
 
 dev_dependencies:
   flutter_test:
