--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,9 @@ dependencies:
   gradient_borders: ^1.0.2
   get: ^4.6.6
   persistent_bottom_nav_bar: any
+  provider: ^6.1.5+1
+  intl: ^0.19.0
+
 
 
 
