--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,9 @@ dependencies:
   persistent_bottom_nav_bar: any
   provider: ^6.1.5+1
   intl: ^0.19.0
+  video_player: ^2.10.1
+  chewie: ^1.5.0
+
 
 
 
