--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,7 +46,13 @@ dependencies:
   provider: ^6.1.5+1
   intl: ^0.19.0
   video_player: ^2.10.1
-  chewie: ^1.5.0
+  flutter_svg: ^2.2.3
+  share_plus: ^12.0.1
+  url_launcher: ^6.1.12
+  fluttericon: any
+  font_awesome_flutter: ^10.5.0
+
+
 
 
 
