--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,17 +45,13 @@ dependencies:
   persistent_bottom_nav_bar: any
   provider: ^6.1.5+1
   intl: ^0.19.0
-  video_player: ^2.10.1
-  flutter_svg: ^2.2.3
+  google_fonts: ^6.3.3
   share_plus: ^12.0.1
-  url_launcher: ^6.1.12
-  fluttericon: any
-  font_awesome_flutter: ^10.5.0
-
-
-
-
-
+  flutter_rating_bar: ^4.0.1
+  smooth_page_indicator: ^2.0.1
+  syncfusion_flutter_charts: ^32.1.21
+  cached_network_image: ^3.4.1
+  video_player: ^2.10.1
 
 
 dev_dependencies:
